<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".view.activities.SplashScreenActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/SplashScreenImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_splash_screen"
             />

        <TextView
            android:id="@+id/tv_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/splash_app"
            app:layout_constraintBottom_toBottomOf="@id/SplashScreenImage" />

        <TextView
            android:id="@+id/tv_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_autor"
            android:textColor="@color/white"
            android:textSize="@dimen/splash_autor"
            app:layout_constraintBottom_toBottomOf="@id/tv_app"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:textSize="@dimen/splash_autor"
            app:layout_constraintBottom_toBottomOf="@id/tv_app"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>